# ddlc

./: .env.example  .gitignore  Dockerfile  README.md  atlan-app-registry.json  demo-start.sh  main.py  pyproject.toml  test_dqs_push.py
app/: activities.py  ddlc_workflow_client.py  workflow.py
app/blueprint_generator/: __init__.py  archetypes.py  demo.py  engine.py  example_output.json  models.py  server.py
app/blueprint_generator/frontend/: index.html
app/blueprint_generator/frontend/static/: app.js  styles.css
app/ddlc/: __init__.py  atlan_assets.py  dbt_generator.py  demo_seed.py  models.py  odcs.py  server.py  store.py
app/ddlc/frontend/: contract.html  index.html  request.html
app/ddlc/frontend/static/: contract-builder.js  ddlc.css  ddlc.js
app/rdm/: __init__.py  atlan_sync.py  demo_seed.py  models.py  server.py  store.py
app/rdm/frontend/: index.html
app/rdm/frontend/static/: rdm.css  rdm.js
docs/: 404.html  contract.html  index.html  request.html
docs/static/: contract-builder.js  ddlc.css  mock-api.js  yaml-preview.js
tests/unit/: test_blueprint_generator.py
